--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <!-- Home Info-1 (Left side) -->
-                <div class="home__info">
+                <div class="home__info" id="home__info-left">
                     <div class="home__info-services"> 
                         <h3 class="home__info-title">SERVICES</h3>
                         <p class="home__info-description"> 
@@ -186,14 +186,14 @@
                     <div class="home__info-contact">
                         <h3 class="home__info-title">CONTACT</h3>
                         <p class="home__info-description"> 
-                            Kamloops, Canada<br> 
-                            r.homma.inbox@gmail.com<br> 
-                            +1 250-574-5624<br>
+                            <i class="ri-map-pin-line"></i>Kamloops, Canada<br> 
+                            <i class="ri-mail-line"></i>r.homma.inbox@gmail.com<br> 
+                            <i class="ri-phone-line"></i>+1 250-574-5624<br>
                         </p> 
                     </div>
                 </div>
                 <!-- Home Info-2 (Right side) -->
-                <div class="home__info">
+                <div class="home__info" id="home__info-right">
                     <div class="home__info-years"> 
                         <h3 class="home__info-title">YEARS OF EXPERIENCE</h3>
                         <p class="home__info-number">03+</p>
