--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                         <div class="credentials__info">
                             <div class="credentials__info-left">
                                 <h3 class="credentials__name">
-                                    Shift Leader | Sushi Chef | Server
+                                    Shift Leader | Chef | Server
                                 </h3>
                                 <span class="credentials__location">Sushiro, Japan</span>
                                 <div class="credentials__duration">
