Update project buttons & scroll up button

--- a/index.html
+++ b/index.html
@@ -228,15 +228,21 @@
                             <div>
                                 <span class="projects__subtitle">Image replication web app</span>
                                 <h1 class="projects__title">AI Visual Doppelganger</h1>
-                                <a href="#" class="projects__button">
-                                    <span>View demo</span>
-                                    <i class="ri-arrow-right-circle-line"></i>
-                                </a>
-                                &#160; &#160;         
-                                <a href="#" class="projects__button">
-                                    <span>Source code</span>
-                                    <i class="ri-arrow-right-circle-line"></i>
-                                </a>
+                                <div class="projects__button-contents" id="project1-buttons">
+                                     
+                                    <a href="#" class="projects__button">
+                                        <span>View demo</span>
+                                        <i class="ri-youtube-line"></i>
+                                    </a>  
+                                    <a class="projects__button" href="https://github.com/Ryo-samurai6340/AI-Visual-Doppelganger" target="_blank">
+                                        <span>Source code</span>
+                                        <i class="ri-code-s-slash-line"></i>
+                                    </a>
+                                    <a href="#" class="projects__button">
+                                        <span>Live demo</span>
+                                        <i class="ri-global-line"></i>
+                                    </a> 
+                                </div>
                             </div>
                         </div>
                         <!-- PROJECT 2 -->
@@ -245,15 +251,16 @@
                             <div>
                                 <span class="projects__subtitle">Food delivery app on Android</span>
                                 <h1 class="projects__title">PlateMate</h1>
-                                <a href="#" class="projects__button">
-                                    <span>View demo</span>
-                                    <i class="ri-arrow-right-circle-line"></i>
-                                </a>
-                                &#160; &#160;         
-                                <a href="#" class="projects__button">
-                                    <span>Source code</span>
-                                    <i class="ri-arrow-right-circle-line"></i>
-                                </a>
+                                <div class="projects__button-contents" id="project2-buttons">
+                                    <a href="#" class="projects__button">
+                                        <span>View demo</span>
+                                        <i class="ri-youtube-line"></i>
+                                    </a>    
+                                    <a href="#" class="projects__button">
+                                        <span>Source code</span>
+                                        <i class="ri-code-s-slash-line"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <!-- PROJECT 3 -->
@@ -264,10 +271,12 @@
                             <div>
                                 <span class="projects__subtitle">4+1 diagrams of food delivery system</span>
                                 <h1 class="projects__title">PlateMate Architecture</h1>
-                                <a href="#" class="projects__button">
-                                    <span>View demo</span>
-                                    <i class="ri-arrow-right-circle-line"></i>
-                                </a>
+                                <div class="projects__button-contents" id="project3-buttons">
+                                    <a class="projects__button" href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank">
+                                        <span>View demo</span>
+                                        <i class="ri-youtube-line"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <!-- PROJECT 4 -->
@@ -276,15 +285,20 @@
                             <div>
                                 <span class="projects__subtitle">Campus network infrastructure design</span>
                                 <h1 class="projects__title">Campus Network Simulator</h1>
-                                <a href="#" class="projects__button">
-                                    <span>View demo</span>
-                                    <i class="ri-arrow-right-circle-line"></i>
-                                </a>
-                                &#160; &#160;         
-                                <a href="#" class="projects__button">
-                                    <span>View documentation</span>
-                                    <i class="ri-arrow-right-circle-line"></i>
-                                </a>
+                                <div class="projects__button-contents" id="project4-buttons">
+                                    <a href="#" class="projects__button">
+                                        <span>View demo</span>
+                                        <i class="ri-youtube-line"></i>
+                                    </a>
+                                    <a class="projects__button" href="https://drive.google.com/file/d/12-OOlflfBQ_EldvZ7I4fiOSQqp77dqYw/view" target="_blank">
+                                        <span>Download doc</span>
+                                        <i class="ri-file-download-line"></i>
+                                    </a>
+                                    <a href="#" class="projects__button">
+                                        <span>Download file</span>
+                                        <i class="ri-download-2-line"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -985,7 +999,7 @@
 
     <!-- SCROLL UP -->
     <a href="#home" class="scrollup" id="scroll-up">
-        <i class="ri-arrow-up-circle-line"></i>
+        <i class="ri-arrow-up-line"></i>
     </a>
     <!-- SCROLL REVEAL -->
     <script src="assets/js/scrollreveal.min.js"></script>
