--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                     </a>
                                 </button>
                                 <button class="social-button .social-button5">
-                                    <a class="youtube-button" href="#" target="_blank">
+                                    <a class="youtube-button" href="https://www.youtube.com/@rh.project_gallery" target="_blank">
                                         <svg id="youtube" viewBox="0 0 24 24" fill="currentColor">
                                             <path d="M12.2439 4C12.778 4.00294 14.1143 4.01586 15.5341 4.07273L16.0375 4.09468C17.467 4.16236 18.8953 4.27798 19.6037 4.4755C20.5486 4.74095 21.2913 5.5155 21.5423 6.49732C21.942 8.05641 21.992 11.0994 21.9982 11.8358L21.9991 11.9884L21.9991 11.9991C21.9991 11.9991 21.9991 12.0028 21.9991 12.0099L21.9982 12.1625C21.992 12.8989 21.942 15.9419 21.5423 17.501C21.2878 18.4864 20.5451 19.261 19.6037 19.5228C18.8953 19.7203 17.467 19.8359 16.0375 19.9036L15.5341 19.9255C14.1143 19.9824 12.778 19.9953 12.2439 19.9983L12.0095 19.9991L11.9991 19.9991C11.9991 19.9991 11.9956 19.9991 11.9887 19.9991L11.7545 19.9983C10.6241 19.9921 5.89772 19.941 4.39451 19.5228C3.4496 19.2573 2.70692 18.4828 2.45587 17.501C2.0562 15.9419 2.00624 12.8989 2 12.1625V11.8358C2.00624 11.0994 2.0562 8.05641 2.45587 6.49732C2.7104 5.51186 3.45308 4.73732 4.39451 4.4755C5.89772 4.05723 10.6241 4.00622 11.7545 4H12.2439ZM9.99911 8.49914V15.4991L15.9991 11.9991L9.99911 8.49914Z"></path>
                                         </svg>
@@ -204,7 +204,7 @@
                     </div>
                     <div class="home__info-companies"> 
                         <h3 class="home__info-title">
-                            COMPANIES WORKED<br>(Non-tech industries)
+                            COMPANIES WORKED<br>(non-tech industries)
                         </h3>
                         <p class="home__info-number">04</p>
                     </div>
@@ -222,23 +222,22 @@
                     <div class="swiper-wrapper">
                         <!-- PROJECT 1 -->
                         <div class="projects__content swiper-slide"> 
-                            <a target="_blank" href="https://ai-visual-doppelganger.onrender.com/">
+                            <a href="https://ai-visual-doppelganger.onrender.com/" target="_blank">
                                 <img src="assets/img/proj1.jpg" alt="project image" class="projects__img">
                             </a>
                             <div>
                                 <span class="projects__subtitle">Image replication web app</span>
                                 <h1 class="projects__title">AI Visual Doppelganger</h1>
                                 <div class="projects__button-contents" id="project1-buttons">
-                                     
-                                    <a href="#" class="projects__button">
+                                    <a href="https://youtu.be/VT6eddrVVOA" target="_blank" class="projects__button">
                                         <span>View demo</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>  
-                                    <a class="projects__button" href="https://github.com/Ryo-samurai6340/AI-Visual-Doppelganger" target="_blank">
+                                    <a href="https://github.com/Ryo-samurai6340/AI-Visual-Doppelganger" target="_blank" class="projects__button">
                                         <span>Source code</span>
                                         <i class="ri-code-s-slash-line"></i>
                                     </a>
-                                    <a href="#" class="projects__button">
+                                    <a href="https://ai-visual-doppelganger.onrender.com/" target="_blank" class="projects__button">
                                         <span>Live demo</span>
                                         <i class="ri-global-line"></i>
                                     </a> 
@@ -246,13 +245,15 @@
                             </div>
                         </div>
                         <!-- PROJECT 2 -->
-                        <div class="projects__content swiper-slide"> 
-                            <img src="assets/img/proj2.jpeg" alt="project image" class="projects__img">
+                        <div class="projects__content swiper-slide">
+                            <a href="https://youtu.be/N_yUfrnbgWI" target="_blank">
+                                <img src="assets/img/proj2.jpeg" alt="project image" class="projects__img">
+                            </a>
                             <div>
                                 <span class="projects__subtitle">Food delivery app on Android</span>
                                 <h1 class="projects__title">PlateMate</h1>
                                 <div class="projects__button-contents" id="project2-buttons">
-                                    <a href="#" class="projects__button">
+                                    <a href="https://youtu.be/N_yUfrnbgWI" target="_blank" class="projects__button">
                                         <span>View demo</span>
                                         <i class="ri-youtube-line"></i>
                                     </a>    
@@ -264,39 +265,41 @@
                             </div>
                         </div>
                         <!-- PROJECT 3 -->
-                        <div class="projects__content swiper-slide"> 
-                            <a target="_blank" href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/">
-                                <img src="assets/img/proj3.png" alt="project image" class="projects__img">
+                        <div class="projects__content swiper-slide">
+                            <a href="https://youtu.be/ayVUSVRPLqE" target="_blank">
+                                <img src="assets/img/proj4.png" alt="project image" class="projects__img">
                             </a>
                             <div>
-                                <span class="projects__subtitle">4+1 diagrams of food delivery system</span>
-                                <h1 class="projects__title">PlateMate Architecture</h1>
-                                <div class="projects__button-contents" id="project3-buttons">
-                                    <a class="projects__button" href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank">
+                                <span class="projects__subtitle">Campus network infrastructure design</span>
+                                <h1 class="projects__title">Campus Network Simulator</h1>
+                                <div class="projects__button-contents" id="project4-buttons">
+                                    <a href="https://youtu.be/ayVUSVRPLqE" target="_blank" class="projects__button">
                                         <span>View demo</span>
                                         <i class="ri-youtube-line"></i>
+                                    </a>
+                                    <a href="https://drive.google.com/file/d/12-OOlflfBQ_EldvZ7I4fiOSQqp77dqYw/view" target="_blank" class="projects__button">
+                                        <span>View doc file</span>
+                                        <i class="ri-file-download-line"></i>
+                                    </a>
+                                    <a href="https://drive.usercontent.google.com/u/0/uc?id=1HVgYZu9RMIlfEn8bxssOG3lytE-uWUOh&export=download" class="projects__button">
+                                        <span>Download pkt file</span>
+                                        <i class="ri-download-2-line"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
                         <!-- PROJECT 4 -->
                         <div class="projects__content swiper-slide"> 
-                            <img src="assets/img/proj4.png" alt="project image" class="projects__img">
+                            <a href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank">
+                                <img src="assets/img/proj3.png" alt="project image" class="projects__img">
+                            </a>
                             <div>
-                                <span class="projects__subtitle">Campus network infrastructure design</span>
-                                <h1 class="projects__title">Campus Network Simulator</h1>
-                                <div class="projects__button-contents" id="project4-buttons">
-                                    <a href="#" class="projects__button">
+                                <span class="projects__subtitle">4+1 diagrams of food delivery system</span>
+                                <h1 class="projects__title">PlateMate Architecture</h1>
+                                <div class="projects__button-contents" id="project3-buttons">
+                                    <a href="https://prezi.com/view/kiFUg0jNey3zD5mN1ctl/" target="_blank" class="projects__button">
                                         <span>View demo</span>
                                         <i class="ri-youtube-line"></i>
-                                    </a>
-                                    <a class="projects__button" href="https://drive.google.com/file/d/12-OOlflfBQ_EldvZ7I4fiOSQqp77dqYw/view" target="_blank">
-                                        <span>Download doc</span>
-                                        <i class="ri-file-download-line"></i>
-                                    </a>
-                                    <a href="#" class="projects__button">
-                                        <span>Download file</span>
-                                        <i class="ri-download-2-line"></i>
                                     </a>
                                 </div>
                             </div>
@@ -987,7 +990,7 @@
                 <a href="" target="_blank" class="footer__social-link"> 
                     <i class="ri-discord-fill"></i>
                 </a>
-                <a href="" target="_blank" class="footer__social-link"> 
+                <a href="https://www.youtube.com/@rh.project_gallery" target="_blank" class="footer__social-link"> 
                     <i class="ri-youtube-fill"></i>
                 </a>
             </ul>
