Updated icons in html

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- FAVICON -->
+    <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <!-- REMIX ICONS -->
+    <!-- Remix Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet"/>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- SWIPER CSS -->
+    <!-- SwiperCSS -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css"> 
-    <!-- CSS LINK -->
+    <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/styles.css">
-    <!-- SCROLL REVEAL -->
+    <!-- ScrollReveal -->
     <script src="assets/js/scrollreveal.min.js"></script>
-    <!-- SWIPER JS -->
+    <!-- SwiperJS -->
     <script src="assets/js/swiper-bundle.min.js"></script>
-    <!-- EmailJS SDK -->
+    <!-- EmailJS -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
@@ -928,14 +928,15 @@
                                 <i class="bi bi-feather"></i>
                             </a>
                         </div>
-                        <div class="download__button-container">
-                            <button class="download__button" type="button">
-                                <span class="download__button-text">Download CV</span>
-                                <span class="download__button-icon">
-                                    <i class="ri-download-2-line"></i>
-                                </span>
-                            </button>
-                        </div>
+                    </div>
+
+                    <div class="download__button-container">
+                        <button class="download__button" type="button">
+                            <span class="download__button-text">Download CV</span>
+                            <span class="download__button-icon">
+                                <i class="ri-download-2-line"></i>
+                            </span>
+                        </button>
                     </div>
                 </div>
 
@@ -944,7 +945,7 @@
                     <h3 class="contact__title">
                         <i class="bi bi-send"></i>Send me your inquiry
                     </h3>
-                    <form action="" class="contact__form" id="contact-form">
+                    <form class="contact__form" id="contact-form">
                         <div class="contact__form-div">
                             <label class="contact__form-tag">Name</label>
                             <input name="sender_name" placeholder="Enter your name" class="contact__form-input" id="contact-name">
@@ -993,20 +994,21 @@
             </ul>
             <ul class="footer__social">
                 <a href="https://www.linkedin.com/" target="_blank" class="footer__social-link"> 
-                    <i class="ri-linkedin-box-fill"></i>
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
                 <a href="https://github.com/" target="_blank" class="footer__social-link"> 
-                    <i class="ri-github-fill"></i>
+                    <i class="fa-brands fa-square-github"></i>
                 </a>
                 <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="footer__social-link"> 
-                    <i class="ri-discord-fill"></i>
+                    <i class="bi bi-discord"></i>
                 </a>
                 <a href="https://www.youtube.com/@rh.project_gallery" target="_blank" class="footer__social-link"> 
-                    <i class="ri-youtube-fill"></i>
+                    <i class="fa-brands fa-youtube"></i>
                 </a>
             </ul>
             <span class="footer__copyright">
-                &#169; 2024 - Ryoichi Homma. All rights reserved.
+                <p>&#169; 2024 - Ryoichi Homma.</p>
+                <p>All rights reserved.</p>
             </span>
         </div>
     </footer>
