Revert "update files"
This reverts commit 10bcad4f646c2a898b9e35debb431c5d3957775b.

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             });
         })();
     </script>
-    <title>Ryoichi Homma - Portfolio</title>
+    <title>Portfolio</title>
 </head>        
 
 <body> 
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#home" class="nav__logo">
+            <a href="#" class="nav__logo">
                 <i class="fa-solid fa-dumbbell"></i>
-                <p>Ryoichi Homma</p>    
-                <i class="fa-solid fa-baseball-bat-ball"></i>
+                Ryoichi Homma
+                <i class="fa-solid fa-baseball"></i>
             </a>
             <!-- Navigation Menu -->
             <div class="nav__menu" id="nav-menu"> 
@@ -99,7 +99,7 @@
     </header>
     
     <main class="main">
-        <!--********************** HOME SECTION **********************-->
+        <!-- Home Section -->
         <section class="home section" id="home"> 
             <div class="home__container container grid section__border">
                 <div class="home__profile grid">
@@ -222,7 +222,7 @@
             </div>
         </section>
 
-        <!--******************** PROJECTS SECTION ********************-->
+        <!--********************* PROJECTS SECTION *********************-->
         <section class="projects section" id="projects"> 
             <h2 class="section__title">Projects</h2>
             <span class="section__subtitle">Most recent works</span>
@@ -328,7 +328,7 @@
             </div>
         </section>
 
-        <!--********************* SKILLS SECTION *********************-->
+        <!-- Skills Section -->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
             <span class="section__subtitle">My technical skills</span>
@@ -693,7 +693,7 @@
             </div>
         </section>
 
-        <!--******************** SERVICES SECTION ********************-->
+        <!--************************ SERVICES SECTION **************************-->
         <section class="services section" id="services"> 
             <h2 class="section__title">Services</h2>
             <span class="section__subtitle">What I contribute to you</span>
@@ -709,7 +709,7 @@
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path d="M24 12L18.3431 17.6569L16.9289 16.2426L21.1716 12L16.9289 7.75736L18.3431 6.34315L24 12ZM2.82843 12L7.07107 16.2426L5.65685 17.6569L0 12L5.65685 6.34315L7.07107 7.75736L2.82843 12ZM9.78845 21H7.66009L14.2116 3H16.3399L9.78845 21Z"></path>
                     </svg>
-                    <p>See more<i class="bi bi-search"></i></p>
+                    <p>View more</p>
                 </div>
                 <!-- SERVICES 2 (Database development) -->
                 <div class="service__card" id="database-development">
@@ -722,7 +722,7 @@
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path d="M5 12.5C5 12.8134 5.46101 13.3584 6.53047 13.8931C7.91405 14.5849 9.87677 15 12 15C14.1232 15 16.0859 14.5849 17.4695 13.8931C18.539 13.3584 19 12.8134 19 12.5V10.3287C17.35 11.3482 14.8273 12 12 12C9.17273 12 6.64996 11.3482 5 10.3287V12.5ZM19 15.3287C17.35 16.3482 14.8273 17 12 17C9.17273 17 6.64996 16.3482 5 15.3287V17.5C5 17.8134 5.46101 18.3584 6.53047 18.8931C7.91405 19.5849 9.87677 20 12 20C14.1232 20 16.0859 19.5849 17.4695 18.8931C18.539 18.3584 19 17.8134 19 17.5V15.3287ZM3 17.5V7.5C3 5.01472 7.02944 3 12 3C16.9706 3 21 5.01472 21 7.5V17.5C21 19.9853 16.9706 22 12 22C7.02944 22 3 19.9853 3 17.5ZM12 10C14.1232 10 16.0859 9.58492 17.4695 8.89313C18.539 8.3584 19 7.81342 19 7.5C19 7.18658 18.539 6.6416 17.4695 6.10687C16.0859 5.41508 14.1232 5 12 5C9.87677 5 7.91405 5.41508 6.53047 6.10687C5.46101 6.6416 5 7.18658 5 7.5C5 7.81342 5.46101 8.3584 6.53047 8.89313C7.91405 9.58492 9.87677 10 12 10Z"></path>
                     </svg>
-                    <p>See more<i class="bi bi-search"></i></p>
+                    <p>View more</p>
                 </div>
                 <!-- SERVICES 3 (Android app development) -->
                 <div class="service__card" id="android-app-development">
@@ -735,7 +735,7 @@
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path d="M19 13H5V20H19V13ZM19 11C19 7.13401 15.866 4 12 4C8.13401 4 5 7.13401 5 11H19ZM6.38231 3.9681C7.92199 2.73647 9.87499 2 12 2C14.125 2 16.078 2.73647 17.6177 3.9681L19.0711 2.51472L20.4853 3.92893L19.0319 5.38231C20.2635 6.92199 21 8.87499 21 11V21C21 21.5523 20.5523 22 20 22H4C3.44772 22 3 21.5523 3 21V11C3 8.87499 3.73647 6.92199 4.9681 5.38231L3.51472 3.92893L4.92893 2.51472L6.38231 3.9681ZM9 9C8.44772 9 8 8.55228 8 8C8 7.44772 8.44772 7 9 7C9.55228 7 10 7.44772 10 8C10 8.55228 9.55228 9 9 9ZM15 9C14.4477 9 14 8.55228 14 8C14 7.44772 14.4477 7 15 7C15.5523 7 16 7.44772 16 8C16 8.55228 15.5523 9 15 9Z"></path>
                     </svg>
-                    <p>See more<i class="bi bi-search"></i></p>
+                    <p>View more</p>
                 </div>
                 <!-- SERVICES 4 (Network design) -->
                 <div class="service__card" id="network-engineering"> 
@@ -748,7 +748,7 @@
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path d="M11.0001 14V11H13.0001V14H18.0001C18.5524 14 19.0001 14.4477 19.0001 15V21C19.0001 21.5523 18.5524 22 18.0001 22H6.00015C5.44786 22 5.00015 21.5523 5.00015 21V15C5.00015 14.4477 5.44786 14 6.00015 14H11.0001ZM2.51074 8.83686C3.83432 4.86424 7.58275 2 12.0001 2C16.4176 2 20.166 4.86424 21.4896 8.83686L19.5917 9.46949C18.5328 6.29139 15.5341 4 12.0001 4C8.46623 4 5.46749 6.29139 4.40862 9.46949L2.51074 8.83686ZM6.3065 10.1021C7.10065 7.71854 9.34971 6 12.0001 6C14.6506 6 16.8996 7.71854 17.6938 10.1021L15.7959 10.7347C15.2665 9.1457 13.7671 8 12.0001 8C10.2332 8 8.73382 9.1457 8.20439 10.7347L6.3065 10.1021ZM7.00015 16V20H17.0001V16H7.00015Z"></path>
                     </svg>
-                    <p>See more<i class="bi bi-search"></i></p>
+                    <p>View more</p>
                 </div>
                 <!-- SERVICES 5 (Software engineering) -->
                 <div class="service__card" id="software-engineering">
@@ -762,7 +762,7 @@
                     <svg viewBox="0 0 24 24" fill="currentColor">
                         <path d="M15 3C15.5523 3 16 3.44772 16 4V8C16 8.55228 15.5523 9 15 9H13V11H17C17.5523 11 18 11.4477 18 12V15H20C20.5523 15 21 15.4477 21 16V20C21 20.5523 20.5523 21 20 21H14C13.4477 21 13 20.5523 13 20V16C13 15.4477 13.4477 15 14 15H16V13H8V15H10C10.5523 15 11 15.4477 11 16V20C11 20.5523 10.5523 21 10 21H4C3.44772 21 3 20.5523 3 20V16C3 15.4477 3.44772 15 4 15H6V12C6 11.4477 6.44772 11 7 11H11V9H9C8.44772 9 8 8.55228 8 8V4C8 3.44772 8.44772 3 9 3H15ZM9 17H5V19H9V17ZM19 17H15V19H19V17ZM14 5H10V7H14V5Z"></path>
                     </svg>
-                    <p>See more<i class="bi bi-search"></i></p>
+                    <p>View more</p>
                 </div>
             </div>
         </section>                
