--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- SwiperCSS -->
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css"> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/styles.css">
     <!-- ScrollReveal -->
-    <script src="assets/js/scrollreveal.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <!-- SwiperJS -->
-    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- EmailJS -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
@@ -1017,7 +1018,6 @@
     <a href="#home" class="scrollup" id="scroll-up">
         <i class="bi bi-hand-index-thumb"></i>
     </a>
-    
     <!-- MAIN -->
     <script src="assets/js/main.js"></script>
 </body>
