--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
                     <div class="home__info-services"> 
                         <h3 class="home__info-title">SERVICES</h3>
                         <p class="home__info-description"> 
-                            Web Development<br>
-                            Database Development<br>
-                            Android App Development<br>
-                            Network Engineering<br>
+                            Full-Stack Development<br>
                             Software Engineering<br>
+                            Network Engineering<br>
+                            Database Engineering<br>
+                            Android App Development
                         </p> 
                     </div>
                     <div class="home__info-languages"> 
@@ -226,7 +226,7 @@
         <!--********************* PROJECTS SECTION *********************-->
         <section class="projects section" id="projects"> 
             <h2 class="section__title">Projects</h2>
-            <span class="section__subtitle">Most recent works</span>
+            <span class="section__subtitle">Latest works</span>
 
             <div class="container section__border">
                 <div class="projects__container swiper">
@@ -332,12 +332,12 @@
         <!--*********************** SKILLS SECTION ***********************-->
         <section class="skills section" id="skills">
             <h2 class="section__title">Skills</h2>
-            <span class="section__subtitle">My technical skills</span>
+            <span class="section__subtitle">Technical skills and uses</span>
             <div class="skills__container container grid section__border"> 
                 <!-- 1st category (frontend dev & web design) -->
                 <div class="skills__content">
                     <h3 class="skills__title">
-                        <i class="ri-layout-5-line"></i>Frontend & Web Designers<i class="ri-crop-line"></i>
+                        <i class="ri-crop-line"></i>Frontend & Web Design
                     </h3>
                     <div class="skills__info">
                         <!-- HTML -->
@@ -434,7 +434,7 @@
                 <!-- 2nd category (backend & cloud deployment platforms) -->
                 <div class="skills__content">
                     <h3 class="skills__title"> 
-                        <i class="ri-server-line"></i>Backend & Cloud Platforms<i class="ri-cloud-line"></i>
+                        <i class="ri-server-line"></i>Backend & Deployment Platforms
                     </h3>
                     <div class="skills__info">
                         <!-- C Language -->
@@ -483,7 +483,7 @@
                                 <img src="assets/img/pillow.png" alt="skills image">
                             </div>
                             <h3 class="skills__name">Pillow</h3>
-                            <span class="skills__subtitle">Intermediate</span>
+                            <span class="skills__subtitle">Basic</span>
                         </div>
                         <!-- MySQL -->
                         <div class="skills__data"> 
@@ -523,7 +523,7 @@
                 <!-- 3rd category (diagramming & networking design tools) -->
                 <div class="skills__content">
                     <h3 class="skills__title"> 
-                        <i class="ri-organization-chart"></i>Diagram & Network Design Tools<i class="ri-router-line"></i>
+                        <i class="ri-organization-chart"></i>Diagramming & Networking Tools
                     </h3>
                     <div class="skills__info">
                         <!-- Lucidchart -->
@@ -564,7 +564,7 @@
                 <!-- 4th category (AI & presentation tools) -->
                 <div class="skills__content">
                     <h3 class="skills__title"> 
-                        <i class="ri-robot-3-line"></i>AI Tools<i class="ri-slideshow-line"></i>
+                        <i class="ri-robot-3-line"></i>AI Tools
                     </h3>
                     <div class="skills__info">
                         <!-- GPT-3.5 -->
@@ -583,6 +583,14 @@
                             <h3 class="skills__name">Copilot</h3>
                             <span class="skills__subtitle">Intermediate</span>
                         </div>
+                        <!-- Perplexity -->
+                        <div class="skills__data"> 
+                            <div class="skills__blob"> 
+                                <img src="assets/img/perplexity.png" alt="skills image">
+                            </div>
+                            <h3 class="skills__name">Perplexity</h3>
+                            <span class="skills__subtitle">Intermediate</span>
+                        </div>
                         <!-- Prezi -->
                         <div class="skills__data"> 
                             <div class="skills__blob"> 
@@ -590,6 +598,13 @@
                             </div>
                             <h3 class="skills__name">Prezi</h3>
                             <span class="skills__subtitle">Advanced</span>
+                        </div>
+                        <div class="skills__data"> 
+                            <div class="skills__blob"> 
+                                <img src="assets/img/veed.png" alt="skills image">
+                            </div>
+                            <h3 class="skills__name">Veed</h3>
+                            <span class="skills__subtitle">Intermediate</span>
                         </div>
                     </div>
                 </div>
@@ -601,11 +616,11 @@
             <h2 class="section__title">Services</h2>
             <span class="section__subtitle">What I contribute to you</span>
             <div class="services__container container grid section__border">
-                <!-- SERVICES 1 (Full-stack web dev) -->
+                <!-- Service 1 (full-stack engineering) -->
                 <div class="service__card" id="web-development">
-                    <h2 class="service__name">Full Stack Web Development</h2>
+                    <h2 class="service__name">Full-Stack Development</h2>
                     <h3 class="service__description">
-                        "Develop dynamic and modern web applications from front-end to back-end. 
+                        "Develop dynamic and modern applications from front-end to back-end. 
                         Seamlessly integrate user interfaces with robust server-side logic, 
                         ensuring a smooth and engaging user experience."
                     </h3>
@@ -614,46 +629,7 @@
                     </svg>
                     <p>See more<i class="bi bi-search"></i></p>
                 </div>
-                <!-- SERVICES 2 (Database development) -->
-                <div class="service__card" id="database-development">
-                    <h2 class="service__name">Database Development</h2>
-                    <h3 class="service__description">
-                        "Design and implement efficient and scalable database solutions tailored
-                        to clients' needs. Utilize intermediate SQL skills and expertise in
-                        diagramming tools to create optimized database schemas."
-                    </h3>
-                    <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M5 12.5C5 12.8134 5.46101 13.3584 6.53047 13.8931C7.91405 14.5849 9.87677 15 12 15C14.1232 15 16.0859 14.5849 17.4695 13.8931C18.539 13.3584 19 12.8134 19 12.5V10.3287C17.35 11.3482 14.8273 12 12 12C9.17273 12 6.64996 11.3482 5 10.3287V12.5ZM19 15.3287C17.35 16.3482 14.8273 17 12 17C9.17273 17 6.64996 16.3482 5 15.3287V17.5C5 17.8134 5.46101 18.3584 6.53047 18.8931C7.91405 19.5849 9.87677 20 12 20C14.1232 20 16.0859 19.5849 17.4695 18.8931C18.539 18.3584 19 17.8134 19 17.5V15.3287ZM3 17.5V7.5C3 5.01472 7.02944 3 12 3C16.9706 3 21 5.01472 21 7.5V17.5C21 19.9853 16.9706 22 12 22C7.02944 22 3 19.9853 3 17.5ZM12 10C14.1232 10 16.0859 9.58492 17.4695 8.89313C18.539 8.3584 19 7.81342 19 7.5C19 7.18658 18.539 6.6416 17.4695 6.10687C16.0859 5.41508 14.1232 5 12 5C9.87677 5 7.91405 5.41508 6.53047 6.10687C5.46101 6.6416 5 7.18658 5 7.5C5 7.81342 5.46101 8.3584 6.53047 8.89313C7.91405 9.58492 9.87677 10 12 10Z"></path>
-                    </svg>
-                    <p>See more<i class="bi bi-search"></i></p>
-                </div>
-                <!-- SERVICES 3 (Android app development) -->
-                <div class="service__card" id="android-app-development">
-                    <h2 class="service__name">Android App Development</h2>
-                    <h3 class="service__description">
-                        "Craft cutting-edge Android applications with sleek designs and intuitive
-                        user interfaces. Leverage the power of Android Studio and industry best
-                        practices to develop feature-rich apps that meet users' demands."
-                    </h3>
-                    <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M19 13H5V20H19V13ZM19 11C19 7.13401 15.866 4 12 4C8.13401 4 5 7.13401 5 11H19ZM6.38231 3.9681C7.92199 2.73647 9.87499 2 12 2C14.125 2 16.078 2.73647 17.6177 3.9681L19.0711 2.51472L20.4853 3.92893L19.0319 5.38231C20.2635 6.92199 21 8.87499 21 11V21C21 21.5523 20.5523 22 20 22H4C3.44772 22 3 21.5523 3 21V11C3 8.87499 3.73647 6.92199 4.9681 5.38231L3.51472 3.92893L4.92893 2.51472L6.38231 3.9681ZM9 9C8.44772 9 8 8.55228 8 8C8 7.44772 8.44772 7 9 7C9.55228 7 10 7.44772 10 8C10 8.55228 9.55228 9 9 9ZM15 9C14.4477 9 14 8.55228 14 8C14 7.44772 14.4477 7 15 7C15.5523 7 16 7.44772 16 8C16 8.55228 15.5523 9 15 9Z"></path>
-                    </svg>
-                    <p>See more<i class="bi bi-search"></i></p>
-                </div>
-                <!-- SERVICES 4 (Network design) -->
-                <div class="service__card" id="network-engineering"> 
-                    <h2 class="service__name">Network Engineering</h2>
-                    <h3 class="service__description">
-                        "Architect and configure robust network infrastructures to support
-                        organizations' operations. Harness the capability of Cisco Packet
-                        Tracer to design resilient networks with high availability and security."
-                    </h3>
-                    <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M11.0001 14V11H13.0001V14H18.0001C18.5524 14 19.0001 14.4477 19.0001 15V21C19.0001 21.5523 18.5524 22 18.0001 22H6.00015C5.44786 22 5.00015 21.5523 5.00015 21V15C5.00015 14.4477 5.44786 14 6.00015 14H11.0001ZM2.51074 8.83686C3.83432 4.86424 7.58275 2 12.0001 2C16.4176 2 20.166 4.86424 21.4896 8.83686L19.5917 9.46949C18.5328 6.29139 15.5341 4 12.0001 4C8.46623 4 5.46749 6.29139 4.40862 9.46949L2.51074 8.83686ZM6.3065 10.1021C7.10065 7.71854 9.34971 6 12.0001 6C14.6506 6 16.8996 7.71854 17.6938 10.1021L15.7959 10.7347C15.2665 9.1457 13.7671 8 12.0001 8C10.2332 8 8.73382 9.1457 8.20439 10.7347L6.3065 10.1021ZM7.00015 16V20H17.0001V16H7.00015Z"></path>
-                    </svg>
-                    <p>See more<i class="bi bi-search"></i></p>
-                </div>
-                <!-- SERVICES 5 (Software engineering) -->
+                <!-- Service 2 (software engineering) -->
                 <div class="service__card" id="software-engineering">
                     <h2 class="service__name">Software Engineering</h2>
                     <h3 class="service__description">
@@ -667,13 +643,54 @@
                     </svg>
                     <p>See more<i class="bi bi-search"></i></p>
                 </div>
+                <!-- Service 3 (network negineering) -->
+                <div class="service__card" id="network-engineering"> 
+                    <h2 class="service__name">Network Engineering</h2>
+                    <h3 class="service__description">
+                        "Architect and configure robust network infrastructures to support
+                        organizations' operations. Harness the capability of Cisco Packet
+                        Tracer to design resilient networks with high availability and security."
+                    </h3>
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M11.0001 14V11H13.0001V14H18.0001C18.5524 14 19.0001 14.4477 19.0001 15V21C19.0001 21.5523 18.5524 22 18.0001 22H6.00015C5.44786 22 5.00015 21.5523 5.00015 21V15C5.00015 14.4477 5.44786 14 6.00015 14H11.0001ZM2.51074 8.83686C3.83432 4.86424 7.58275 2 12.0001 2C16.4176 2 20.166 4.86424 21.4896 8.83686L19.5917 9.46949C18.5328 6.29139 15.5341 4 12.0001 4C8.46623 4 5.46749 6.29139 4.40862 9.46949L2.51074 8.83686ZM6.3065 10.1021C7.10065 7.71854 9.34971 6 12.0001 6C14.6506 6 16.8996 7.71854 17.6938 10.1021L15.7959 10.7347C15.2665 9.1457 13.7671 8 12.0001 8C10.2332 8 8.73382 9.1457 8.20439 10.7347L6.3065 10.1021ZM7.00015 16V20H17.0001V16H7.00015Z"></path>
+                    </svg>
+                    <p>See more<i class="bi bi-search"></i></p>
+                </div>
+                <!-- Service 4 (database engineering) -->
+                <div class="service__card" id="database-development">
+                    <h2 class="service__name">Database Engineering</h2>
+                    <h3 class="service__description">
+                        "Design and implement efficient, scalable, and maintainable database
+                        solutions tailored to clients' needs. Utilize intermediate SQL skills
+                        and expertise in diagramming tools to create optimized database schemas."
+                    </h3>
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M5 12.5C5 12.8134 5.46101 13.3584 6.53047 13.8931C7.91405 14.5849 9.87677 15 12 15C14.1232 15 16.0859 14.5849 17.4695 13.8931C18.539 13.3584 19 12.8134 19 12.5V10.3287C17.35 11.3482 14.8273 12 12 12C9.17273 12 6.64996 11.3482 5 10.3287V12.5ZM19 15.3287C17.35 16.3482 14.8273 17 12 17C9.17273 17 6.64996 16.3482 5 15.3287V17.5C5 17.8134 5.46101 18.3584 6.53047 18.8931C7.91405 19.5849 9.87677 20 12 20C14.1232 20 16.0859 19.5849 17.4695 18.8931C18.539 18.3584 19 17.8134 19 17.5V15.3287ZM3 17.5V7.5C3 5.01472 7.02944 3 12 3C16.9706 3 21 5.01472 21 7.5V17.5C21 19.9853 16.9706 22 12 22C7.02944 22 3 19.9853 3 17.5ZM12 10C14.1232 10 16.0859 9.58492 17.4695 8.89313C18.539 8.3584 19 7.81342 19 7.5C19 7.18658 18.539 6.6416 17.4695 6.10687C16.0859 5.41508 14.1232 5 12 5C9.87677 5 7.91405 5.41508 6.53047 6.10687C5.46101 6.6416 5 7.18658 5 7.5C5 7.81342 5.46101 8.3584 6.53047 8.89313C7.91405 9.58492 9.87677 10 12 10Z"></path>
+                    </svg>
+                    <p>See more<i class="bi bi-search"></i></p>
+                </div>
+                <!-- Service 5 (Android app development) -->
+                <div class="service__card" id="android-app-development">
+                    <h2 class="service__name">Android App Development</h2>
+                    <h3 class="service__description">
+                        "Craft cutting-edge Android applications with sleek designs and intuitive
+                        user interfaces. Leverage the power of Android Studio and industry best
+                        practices to develop feature-rich apps that meet users' demands."
+                    </h3>
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19 13H5V20H19V13ZM19 11C19 7.13401 15.866 4 12 4C8.13401 4 5 7.13401 5 11H19ZM6.38231 3.9681C7.92199 2.73647 9.87499 2 12 2C14.125 2 16.078 2.73647 17.6177 3.9681L19.0711 2.51472L20.4853 3.92893L19.0319 5.38231C20.2635 6.92199 21 8.87499 21 11V21C21 21.5523 20.5523 22 20 22H4C3.44772 22 3 21.5523 3 21V11C3 8.87499 3.73647 6.92199 4.9681 5.38231L3.51472 3.92893L4.92893 2.51472L6.38231 3.9681ZM9 9C8.44772 9 8 8.55228 8 8C8 7.44772 8.44772 7 9 7C9.55228 7 10 7.44772 10 8C10 8.55228 9.55228 9 9 9ZM15 9C14.4477 9 14 8.55228 14 8C14 7.44772 14.4477 7 15 7C15.5523 7 16 7.44772 16 8C16 8.55228 15.5523 9 15 9Z"></path>
+                    </svg>
+                    <p>See more<i class="bi bi-search"></i></p>
+                </div>
+                
+                
             </div>
         </section>                
 
         <!--******************* CREDENTIALS SECTION ******************-->
         <section class="credentials section" id="credentials"> 
             <h2 class="section__title">Credentials</h2>
-            <span class="section__subtitle">My academic and professional backgrounds</span>
+            <span class="section__subtitle">Academic and professional backgrounds</span>
 
             <div class="credentials__container container grid section__border">
                 <div class="credentials__tabs">
@@ -760,7 +777,7 @@
                         <div class="credentials__info">
                             <div class="credentials__info-left">
                                 <h3 class="credentials__name">
-                                    Personal Trainer | Fitness Trainer
+                                    Personal & Fitness Trainer
                                 </h3>
                                 <span class="credentials__location">Central Wellness Sports Club, Japan</span>
                                 <div class="credentials__duration">
