Refactored redundant selectors to optimize code readability and maintainability
to avoid redundant data, deleted 'home__info-left', 'home__info-right', and renamed from 'credentials__info-left' and 'credentials__info-right' to 'credentials__data'. Instead, use ':nth-child(?)'.

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- Home Info-1 (Left side) -->
-                <div class="home__info" id="home__info-left">
+                <!-- Home Info-1 (Left side:nth-child(2)) -->
+                <div class="home__info">
                     <div class="home__info-services"> 
                         <h3 class="home__info-title">SERVICES</h3>
                         <p class="home__info-description"> 
@@ -203,8 +203,8 @@
                         </p> 
                     </div>
                 </div>
-                <!-- Home Info-2 (Right side) -->
-                <div class="home__info" id="home__info-right">
+                <!-- Home Info-2 (Right side:nth-chile(3)) -->
+                <div class="home__info">
                     <div class="home__info-years"> 
                         <h3 class="home__info-title">YEARS OF EXPERIENCE</h3>
                         <p class="home__info-number">03+</p>
@@ -706,8 +706,9 @@
                     <div class="credentials__content credentials__active" info-content id="education">
 
                         <div class="credentials__info">
-                            <div class="credentials__info-left">
-                                <h3 class="credentials__name">Computing Science Diploma</h3>
+                            <!-- Credential data (left side:nth-child(1)) -->
+                            <div class="credentials__data">
+                                <h3 class="credentials__name">Computer Science Diploma</h3>
                                 <span class="credentials__location">Thompson Rivers University, Canada</span>
                                 <div class="credentials__duration">
                                     <i class="bi bi-calendar-week"></i>Jan. 2021 - Apr. 2024
@@ -725,7 +726,8 @@
                                 <span class="credentials__sphere-point"></span>
                                 <!-- <span class="credentials__line"></span> -->
                             </div>
-                            <div class="credentials__info-right">
+                            <!-- Credential data (right side:nth-child(3)) -->
+                            <div class="credentials__data">
                                 <h3 class="credentials__name">Global Consumer Intelligence</h3>
                                 <span class="credentials__location">
                                     The University of Tokyo, Japan
@@ -741,7 +743,8 @@
                     <div class="credentials__content" info-content id="career">
 
                         <div class="credentials__info">
-                            <div class="credentials__info-left">
+                            <!-- Credential data (left side:nth-child(1)) -->
+                            <div class="credentials__data">
                                 <h3 class="credentials__name">
                                     Shift Leader | Chef | Server
                                 </h3>
@@ -762,7 +765,8 @@
                                 <span class="credentials__sphere-point"></span>
                                 <span class="credentials__line"></span>
                             </div>
-                            <div class="credentials__info-right">
+                            <!-- Credential data (right side:nth-child(3)) -->
+                            <div class="credentials__data">
                                 <h3 class="credentials__name">Mover</h3>
                                 <span class="credentials__location">
                                     Family Moving Center, Japan<br>
@@ -775,7 +779,8 @@
                         </div>
 
                         <div class="credentials__info">
-                            <div class="credentials__info-left">
+                            <!-- Credential data (left side:nth-child(1)) -->
+                            <div class="credentials__data">
                                 <h3 class="credentials__name">
                                     Personal & Fitness Trainer
                                 </h3>
