--- a/index.html
+++ b/index.html
@@ -575,6 +575,14 @@
                             <h3 class="skills__name">GPT-3.5</h3>
                             <span class="skills__subtitle">Advanced</span>
                         </div>
+                        <!-- Cursor -->
+                        <div class="skills__data"> 
+                            <div class="skills__blob"> 
+                                <img src="assets/img/cursor.png" alt="skills image">
+                            </div>
+                            <h3 class="skills__name">Cursor</h3>
+                            <span class="skills__subtitle">Intermediate</span>
+                        </div>
                         <!-- Microsoft Copilot -->
                         <div class="skills__data"> 
                             <div class="skills__blob"> 
