Add new class (no-underline) to remove underlines from contact texts

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                         <h3 class="home__info-title">CONTACT</h3>
                         <p class="home__info-description"> 
                             <i class="ri-map-pin-line"></i>Kamloops, Canada<br>
-                            <i class="ri-phone-line"></i>+1 (250) 574-5624<br>
-                            <i class="ri-mail-line"></i>r.homma.inbox@gmail.com<br> 
+                            <i class="ri-phone-line no-underline"></i>+1 (250) 574-5624<br>
+                            <i class="ri-mail-line no-underline"></i>r.homma.inbox@gmail.com<br> 
                         </p> 
                     </div>
                 </div>
@@ -788,7 +788,7 @@
                             <span class="contact__data-title">
                                 <i class="fa-solid fa-envelope"></i>Email
                             </span>
-                            <span class="contact__data-info">r.homma.inbox@gmail.com</span>
+                            <span class="contact__data-info no-underline">r.homma.inbox@gmail.com</span>
                             <a href="mailto:r.homma.inbox@gmail.com" target="_blank" class="contact__button">
                                 <span>Email me</span>
                                 <i class="bi bi-feather"></i>
@@ -798,7 +798,7 @@
                             <span class="contact__data-title">
                                 <i class="bi bi-chat-dots-fill"></i>SMS
                             </span>
-                            <span class="contact__data-info">+1 (250) 574-5624</span>
+                            <span class="contact__data-info no-underline">+1 (250) 574-5624</span>
                             <a href="sms:+1250-574-5624" target="_blank" class="contact__button">
                                 <span>Text me</span>
                                 <i class="bi bi-feather"></i>
