--- a/index.html
+++ b/index.html
@@ -788,10 +788,10 @@
                             <span class="contact__data-title">
                                 <i class="fa-solid fa-envelope"></i>Email
                             </span>
-                            <span class="contact__data-info">r.homma.inbox@gmail.com</span>
                             <a href="mailto:r.homma.inbox@gmail.com" target="_blank" class="contact__button">
-                                <span>Email me</span>
-                                <i class="bi bi-feather"></i>
+                                <span class="contact__data-info">r.homma.inbox@gmail.com</span>
+                                <span class="reachout">Email me <i class="bi bi-feather"></i></span>
+                                
                             </a>
                         </div>
                         <div class="contact__data"> 
