Wrap contact data by a link to disable iOS auto text underline feature

--- a/index.html
+++ b/index.html
@@ -177,8 +177,12 @@
                         <h3 class="home__info-title">CONTACT</h3>
                         <p class="home__info-description"> 
                             <i class="ri-map-pin-line"></i>Kamloops, Canada<br>
-                            <i class="ri-phone-line"></i>+1 (250) 574-5624<br>
-                            <i class="ri-mail-line"></i>r.homma.inbox@gmail.com<br> 
+                            <a href="sms:+1250-574-5624" target="_blank">
+                                <i class="ri-phone-line"></i>+1 (250) 574-5624<br>
+                            </a>
+                            <a href="mailto:r.homma.inbox@gmail.com" target="_blank">
+                                <i class="ri-mail-line"></i>r.homma.inbox@gmail.com<br> 
+                            </a>
                         </p> 
                     </div>
                 </div>
@@ -788,40 +792,36 @@
                             <span class="contact__data-title">
                                 <i class="fa-solid fa-envelope"></i>Email
                             </span>
-                            <span class="contact__data-info">r.homma.inbox@gmail.com</span>
                             <a href="mailto:r.homma.inbox@gmail.com" target="_blank" class="contact__button">
-                                <span>Email me</span>
-                                <i class="bi bi-feather"></i>
+                                <span class="contact__data-info">r.homma.inbox@gmail.com</span>
+                                <span class="contact__data-text">Email me <i class="bi bi-feather"></i></span>
                             </a>
                         </div>
                         <div class="contact__data"> 
                             <span class="contact__data-title">
                                 <i class="bi bi-chat-dots-fill"></i>SMS
                             </span>
-                            <span class="contact__data-info">+1 (250) 574-5624</span>
                             <a href="sms:+1250-574-5624" target="_blank" class="contact__button">
-                                <span>Text me</span>
-                                <i class="bi bi-feather"></i>
+                                <span class="contact__data-info">+1 (250) 574-5624</span>
+                                <span class="contact__data-text">Text me <i class="bi bi-feather"></i></span>
                             </a>
                         </div>
                         <div class="contact__data"> 
                             <span class="contact__data-title">
                                 <i class="bi bi-linkedin"></i>LinkedIn
                             </span>
-                            <span class="contact__data-info">@ryoichi-homma-jp-to-ca</span>
                             <a href="https://www.linkedin.com/in/ryoichi-homma-jp-to-ca/" target="_blank" class="contact__button">
-                                <span>Message me</span>
-                                <i class="bi bi-feather"></i>
+                                <span class="contact__data-info">@ryoichi-homma-jp-to-ca</span>
+                                <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
                             </a>
                         </div>
                         <div class="contact__data"> 
                             <span class="contact__data-title">
                                 <i class="fa-brands fa-discord"></i>Discord
                             </span>
-                            <span class="contact__data-info">@ryoichihomma</span>
                             <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="contact__button">
-                                <span>Message me</span>
-                                <i class="bi bi-feather"></i>
+                                <span class="contact__data-info">@ryoichihomma</span>
+                                <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
                             </a>
                         </div>
                     </div>
