--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                             <textarea name="contact_content" placeholder="Enter your inquiry" class="contact__form-input" id="contact-content"></textarea>
                         </div>
                         <p class="contact__status" id="contact-status"></p>
-                        <button type="submit">
+                        <button type="submit" class="contact__submit-button">
                             <span>Submit <i class="ri-flight-takeoff-line"></i></span>
                         </button>
                     </form>
