Revert "temp test"
This reverts commit 67481419e0bb3c7070023dd006bfd1bf155d9a6c.

--- a/index.html
+++ b/index.html
@@ -859,8 +859,9 @@
                             <textarea name="contact_content" placeholder="Enter your inquiry" class="contact__form-input" id="contact-content"></textarea>
                         </div>
                         <p class="contact__status" id="contact-status"></p>
-                        <button type="submit">
-                            <span>Submit <i class="ri-flight-takeoff-line"></i></span>
+                        <button type="submit" class="contact__submit-button">
+                            <span>Submit</span>
+                            <i class="ri-flight-takeoff-line"></i>
                         </button>
                     </form>
                 </div>
