--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                             <span class="contact__data-title">
                                 <i class="fa-solid fa-envelope"></i>Email
                             </span>
-                            <a href="mailto:r.homma.inbox@gmail.com" target="_blank" class="contact__link">
+                            <a href="mailto:r.homma.inbox@gmail.com" target="_blank" class="contact__button">
                                 <span class="contact__data-info">r.homma.inbox@gmail.com</span>
                                 <span class="contact__data-text">Email me <i class="bi bi-feather"></i></span>
                             </a>
@@ -801,7 +801,7 @@
                             <span class="contact__data-title">
                                 <i class="bi bi-chat-dots-fill"></i>SMS
                             </span>
-                            <a href="sms:+1250-574-5624" target="_blank" class="contact__link">
+                            <a href="sms:+1250-574-5624" target="_blank" class="contact__button">
                                 <span class="contact__data-info">+1 (250) 574-5624</span>
                                 <span class="contact__data-text">Text me <i class="bi bi-feather"></i></span>
                             </a>
@@ -810,7 +810,7 @@
                             <span class="contact__data-title">
                                 <i class="bi bi-linkedin"></i>LinkedIn
                             </span>
-                            <a href="https://www.linkedin.com/in/ryoichi-homma-jp-to-ca/" target="_blank" class="contact__link">
+                            <a href="https://www.linkedin.com/in/ryoichi-homma-jp-to-ca/" target="_blank" class="contact__button">
                                 <span class="contact__data-info">@ryoichi-homma-jp-to-ca</span>
                                 <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
                             </a>
@@ -819,7 +819,7 @@
                             <span class="contact__data-title">
                                 <i class="fa-brands fa-discord"></i>Discord
                             </span>
-                            <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="contact__link">
+                            <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="contact__button">
                                 <span class="contact__data-info">@ryoichihomma</span>
                                 <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
                             </a>
@@ -859,7 +859,7 @@
                             <textarea name="contact_content" placeholder="Enter your inquiry" class="contact__form-input" id="contact-content"></textarea>
                         </div>
                         <p class="contact__status" id="contact-status"></p>
-                        <button type="submit" class="contact__submit-button">
+                        <button type="submit" class="contact__button">
                             <span>Submit</span>
                             <i class="ri-flight-takeoff-line"></i>
                         </button>
