--- a/index.html
+++ b/index.html
@@ -860,8 +860,8 @@
                         </div>
                         <p class="contact__status" id="contact-status"></p>
                         <button type="submit">
-                            <span>Submit</span>
-                            <i class="ri-flight-takeoff-line"></i>
+                            <span>Submit <i class="ri-flight-takeoff-line"></i></span>
+                            
                         </button>
                     </form>
                 </div>
