Revert "temp test"
This reverts commit ae792a3cd16d72f8c10b527b98ec1c6c891237cd.

--- a/index.html
+++ b/index.html
@@ -860,8 +860,8 @@
                         </div>
                         <p class="contact__status" id="contact-status"></p>
                         <button type="submit">
-                            <span>Submit <i class="ri-flight-takeoff-line"></i></span>
-                            
+                            <span>Submit</span>
+                            <i class="ri-flight-takeoff-line"></i>
                         </button>
                     </form>
                 </div>
