Revert "temp test"
This reverts commit c030c97d38605ec53093ef9e79400e6aae383d2d.

--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
                             <textarea name="contact_content" placeholder="Enter your inquiry" class="contact__form-input" id="contact-content"></textarea>
                         </div>
                         <p class="contact__status" id="contact-status"></p>
-                        <button type="submit">
+                        <button type="submit" class="contact__button">
                             <span>Submit</span>
                             <i class="ri-flight-takeoff-line"></i>
                         </button>
