--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
                                 <i class="bi bi-linkedin"></i>LinkedIn
                             </span>
                             <a href="https://www.linkedin.com/in/ryoichi-homma-jp-to-ca/" target="_blank" class="contact__link">
-                                <span class="contact__data-info">@ryoichi-homma-jp-to-ca</span>
+                                <span class="contact__data-info">@ ryoichi-homma-jp-to-ca</span>
                                 <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
                             </a>
                         </div>
@@ -820,7 +820,7 @@
                                 <i class="fa-brands fa-discord"></i>Discord
                             </span>
                             <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="contact__link">
-                                <span class="contact__data-info">@ryoichihomma</span>
+                                <span class="contact__data-info">@ ryoichihomma</span>
                                 <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
                             </a>
                         </div>
@@ -916,11 +916,13 @@
     <a href="#home" class="scrollup" id="scroll-up" title="scrollup icon">
         <i class="bi bi-hand-index-thumb"></i>
     </a>
-    <!-- ScrollReveal -->
+    <!-- ScrollRevealJS -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <!-- SwiperJS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- ValidatorJS -->
+    <script src="https://unpkg.com/validator@latest/validator.min.js"></script>
     <!-- EmailJS -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
