--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                             </span>
                             <a href="mailto:r.homma.inbox@gmail.com" target="_blank" class="contact__link">
                                 <span class="contact__data-info">r.homma.inbox@gmail.com</span>
-                                <span class="contact__data-text">Email me <i class="bi bi-feather"></i></span>
+                                <span class="contact__data-text">Email me <i class="ri-quill-pen-line"></i></span>
                             </a>
                         </div>
                         <div class="contact__data"> 
@@ -812,7 +812,7 @@
                             </span>
                             <a href="https://www.linkedin.com/in/ryoichi-homma-jp-to-ca/" target="_blank" class="contact__link">
                                 <span class="contact__data-info">@ ryoichi-homma-jp-to-ca</span>
-                                <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
+                                <span class="contact__data-text">Message me <i class="ri-quill-pen-line"></i></span>
                             </a>
                         </div>
                         <div class="contact__data"> 
