--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                             </span>
                             <a href="https://www.linkedin.com/in/ryoichi-homma-jp-to-ca/" target="_blank" class="contact__link">
                                 <span class="contact__data-info">@ ryoichi-homma-jp-to-ca</span>
-                                <span class="contact__data-text">Message me <i class="ri-quill-pen-line"></i></span>
+                                <span class="contact__data-text">Message me <i class="bi bi-pen"></i><i class="bi bi-vector-pen"></i></span>
                             </a>
                         </div>
                         <div class="contact__data"> 
@@ -821,7 +821,7 @@
                             </span>
                             <a href="https://discordapp.com/users/1233363421207199827" target="_blank" class="contact__link">
                                 <span class="contact__data-info">@ ryoichihomma</span>
-                                <span class="contact__data-text">Message me <i class="bi bi-feather"></i></span>
+                                <span class="contact__data-text">Message me <i class="ri-ball-pen-line"></i><i class="bi bi-pen-fill"></i></span>
                             </a>
                         </div>
                     </div>
